# image-enhancement-pipeline

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp  run.sh
source/: agarwal.cpp  agarwal.h  aie.h  contrast_enhancement.cpp  contrast_enhancement.h  synef.cpp  synef.h
